# kanshacare_assignment

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/: README.md  deploy.sh  fly.alerts.toml  fly.api.toml  fly.ingestion.toml  fly.web.toml  fly.worker.toml
services/alerts/: Dockerfile  README.md  pyproject.toml
services/alerts/alerts_app/: change_stream.py  dispatcher.py  main.py  rules.py  settings.py  silence.py  subscribers.py  telegram.py  webhook.py
services/alerts/tests/: _fakes.py  test_dispatcher.py  test_health.py  test_rules.py  test_silence.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/api_app/: deps.py  locations.py  main.py  queries.py  settings.py
services/api/api_app/routers/: events.py  locations.py  summaries.py  system.py
services/api/tests/: _fakes.py  conftest.py  test_events.py  test_health.py  test_locations.py  test_summaries.py  test_system_health.py
services/ingestion/: Dockerfile  README.md  pyproject.toml
services/ingestion/ingestion_app/: backfill.py  main.py  poller.py  repo.py  settings.py
services/ingestion/tests/: _fakes.py  conftest.py  test_backfill.py  test_health.py  test_poller.py  test_repo.py
services/ingestion/tests/fixtures/: usgs_hour_sample.json
services/worker/: Dockerfile  README.md  pyproject.toml
services/worker/tests/: test_health.py  test_messages.py  test_rate_limit.py
services/worker/worker_app/: aggregations.py  jobs.py  main.py  messages.py  rate_limit.py  settings.py  worker.py
shared/: pyproject.toml
shared/src/kanshacare_shared/: __init__.py  app_factory.py  config.py  db.py  errors.py  geo.py  health.py  logging.py  metrics.py  middleware.py  models.py  redis_client.py  retry.py  risk.py  usgs.py
shared/src/kanshacare_shared/geocoding/: __init__.py  base.py  cached.py  factory.py  nominatim.py
shared/tests/: test_geo.py  test_risk.py  test_usgs_parsing.py
web/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/locations/: page.tsx
web/src/components/: EventMap.tsx  EventTable.tsx  GlobalView.tsx  LocationCard.tsx  LocationForm.tsx  LocationMiniMap.tsx  LocationsView.tsx  SystemHealthCard.tsx  WindowSelector.tsx
web/src/lib/: api.ts  severity.ts
