[project]
name = "kanshacare-shared"
version = "0.1.0"
description = "Shared library for Kansha Care services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "motor>=3.6",
    "pymongo>=4.9",
    "redis[hiredis]>=5.1",
    "httpx>=0.27",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "tenacity>=9.0",
    "orjson>=3.10",
    "fastapi>=0.115",
    "starlette>=0.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "mypy>=1.13",
    "ruff>=0.6",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kanshacare_shared"]
