[project]
name = "kanshacare-alerts"
version = "0.1.0"
description = "Kansha Care alerts service — rule engine + Telegram webhook"
requires-python = ">=3.12"
dependencies = [
    "kanshacare-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "apscheduler>=3.10",
    "arq>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv.sources]
kanshacare-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alerts_app"]
