[project]
name = "kanshacare-ingestion"
version = "0.1.0"
description = "Kansha Care ingestion service — USGS backfill + 60s poller"
requires-python = ">=3.12"
dependencies = [
    "kanshacare-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "httpx>=0.27",
]

[tool.uv.sources]
kanshacare-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion_app"]
