[project]
name = "kanshacare-worker"
version = "0.1.0"
description = "Kansha Care worker service — arq consumer for Telegram delivery + summary jobs"
requires-python = ">=3.12"
dependencies = [
    "kanshacare-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "arq>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv.sources]
kanshacare-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker_app"]
